# requirements

./: atena_conversation.py  main.py  pyproject.toml
agents/: requirement_agent.py
agents/definition/: atena.py
agents/entities/definition/: atena.py
core/: models.py  proxies.py  supervisor.py
core/MD_reader/: md_config_expandev.py  md_test_monitor_expandev.py
core/adapters/: llm_adapters.py  prompt_adapters.py
core/enums/: conversation.py  models.py  system.py
core/proxies/: agent_proxy.py  llm_proxy.py  task_proxy.py
core/utils/: database_conversation.py
crews/: atena_system.py
docs/: db_expandev.md  general.md
docs/Agent_Construction/: Expandev_Atena_Agent_Construction_Form.md
expandev/LLM/: LLM_definition.py  get_llms.py  langchain_llm_adapter.py
expandev/MD_reader/: md_config_expandev.py  md_test_monitor_expandev.py
expandev/system_prompts/: agent_definition.py  system_prompt.py  task_definition.py
knowledge/definition/: atena_scope.txt  conversation_rules.md
knowledge/specification/: functional_requirements_mapping.txt
knowledge_base/definition/: scope_tree_of_decision.md
llms/: llm_anthropic.py  llm_deepseek.py  llm_openai.py
tasks/definition/: objective_formating.py  objective_understanding.py
