[project]
name = "expandev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"

requires-python = ">=3.13"
dependencies = [
    "annotated-types>=0.7.0",
    "idna>=3.10",
    "langchain>=0.3.20",
    "langchain-core>=0.3.41",
    "langgraph>=0.3.5",
    "packaging>=24.2",
    "pydantic>=2.10.6",
    "pydantic-core>=2.27.2",
    "requests>=2.32.3",
    "typing-extensions>=4.12.2",
    "urllib3>=2.3.0",
    "anyio==4.8.0",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "langgraph-checkpoint==2.0.16",
    "langgraph-prebuilt==0.1.2",
    "langgraph-sdk==0.1.53",
    "langsmith==0.3.11",
    "msgpack==1.1.0",
    "orjson==3.10.15",
    "pyyaml==6.0.2",
    "requests-toolbelt==1.0.0",
    "sniffio==1.3.1",
    "tenacity==9.0.0",
    "zstandard==0.23.0",
    "dotenv>=0.9.9",
    "python-dotenv==1.0.1",
    "watchdog>=6.0.0",
    "psycopg2>=2.9.10",
]
